compiler/testData/diagnostics/tests/tailRecursions/functionWithNoTails.kt
<!TAIL_RECURSIVE_FUNCTION_WITH_NO_TAILS!>TailRecursive fun noTails()<!> {
    // nothing here
}